# Q

./: .clang-format  .gitattributes  CMakeLists.txt  CMakePresets.json  README.md  Versions.json  packages.cmake  sonar-project.properties
.github/workflows/: build-dependencies.yml  nightly.yml  quality.yml  rolling.yml
Core/BSON/: CMakeLists.txt  Core_BSONDocument.h  bson.cpp  bson_document.cpp
Core/Filesystem/: CMakeLists.txt  Filesystem_File.h  file.cpp
Core/ProjectIO/: CMakeLists.txt  ProjectIO_ProjectFile.h  ProjectIO_Serializer.h  serializer.cpp
cmake/: BuildPackage.cmake  BuildVCPKG.cmake  ConfigureLibraries.cmake  ConfigureVCPKG.cmake  GetDependenciesVersion.cmake  InstallPackage.cmake  LoadGTest.cmake  QSharedLibrary.cmake  packages.json
libs/: CMakeLists.txt
